--- a/app/src/main/res/drawable/bg_screen.xml
+++ b/app/src/main/res/drawable/bg_screen.xml
@@ -4,7 +4,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#9561a1"
-        android:endColor="#122259"></gradient>
+        android:startColor="#B82EDA"
+        android:endColor="@color/purple_700"
+        android:type="linear"/>
 
 </shape>
